# crawler

./: README.md
server/: Cargo.toml  init.sql
server/src/: config.rs  lib.rs  main.rs
server/src/db/: article.rs  channel.rs  feed.rs  mod.rs
server/src/model/: article.rs  channel.rs  feed.rs  item.rs
server/src/routes/: articles.rs  channels.rs  feeds.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: api.ts  main.ts
ui/src/assets/: main.css
ui/src/components/: ArticleList.vue  ArticleListItem.vue  FeedList.vue
ui/src/models/: Article.ts  Feed.ts
ui/src/plugins/: vuetify.ts
ui/src/router/: index.ts
ui/src/stores/: feed.ts
ui/src/views/: HomeView.vue
