[package]
name = "crawly"
version = "0.1.0"
edition = "2021"

[lib]
name = "parser"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15"
uuid = {version = '1.5', features = ["v4"]}
chrono = {version="0.4", features=["serde"]}
postgres = {version="0.19.7", features=["with-uuid-1", "with-chrono-0_4"]}
rocket = {version = "=0.5.0-rc.4", features=["json", "uuid"]}
rocket_sync_db_pools = {version = "=0.1.0-rc.4", features=["postgres_pool"]}
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2"